--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,10 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.0'
+        classpath 'com.android.tools.build:gradle:1.1.2'
+        classpath 'com.github.dcendents:android-maven-plugin:1.2'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.1'
+        classpath 'nl.javadude.gradle.plugins:license-gradle-plugin:0.11.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -13,6 +16,7 @@ buildscript {
 }
 
 allprojects {
+
     repositories {
         jcenter()
     }
