--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,11 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+VERSION_CODE=1
+VERSION_NAME=1.0.0
+
+BUILD_TOOLS_VERSION=22.0.1
+COMPILE_SDK_VERSION=22
+
+GROUP=com.github.magiepooh.RecyclerItemDecoration
