--- a/gradle.properties
+++ b/gradle.properties
@@ -23,4 +23,8 @@ VERSION_NAME=1.0.0
 BUILD_TOOLS_VERSION=22.0.1
 COMPILE_SDK_VERSION=22
 
-GROUP=com.github.magiepooh.RecyclerItemDecoration
+GROUP=com.github.magiepooh
+SITE_URL=https://github.com/magiepooh/RecyclerItemDecoration
+GIT_URL=https://github.com/magiepooh/RecyclerItemDecoration.git
+ARTIFACT_NAME=RecyclerItemDecoration
+ARTIFACT_DESCRIPTION=ItemDecoration for RecyclerView using LinearLayoutManager
