gitignore, update demo app

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:recyclerview-v7:22.2.1'
 
+    compile 'jp.satorufujiwara:recyclerview-binder:1.2.0'
+
     compile project(':recycler-itemdecoration')
 }
