--- a/recycler-itemdecoration/src/main/AndroidManifest.xml
+++ b/recycler-itemdecoration/src/main/AndroidManifest.xml
@@ -1,8 +1,3 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
     package="com.github.magiepooh.recycleritemdecoration">
-
-    <application android:allowBackup="true" android:label="@string/app_name">
-
-    </application>
-
 </manifest>
