--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
-    package="com.github.magiepooh.recycleritemdecoration.demo"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+  package="com.github.magiepooh.recycleritemdecoration.demo"
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  >
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme">
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
-        <activity android:name=".VerticalActivity"/>
-        <activity android:name=".HorizontalActivity"/>
-    </application>
+  <application
+    android:allowBackup="true"
+    android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
+    android:theme="@style/AppTheme"
+    >
+    <activity
+      android:name=".MainActivity"
+      android:label="@string/app_name"
+      >
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
+        <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
+    </activity>
+    <activity android:name=".VerticalActivity"/>
+    <activity android:name=".HorizontalActivity"/>
+  </application>
 
 </manifest>
